[metadata]
name = BlockDAG
version = 1.0.1
author = Nicholas Pritchard
author_email = professional@nicpritchard.com
description = BlockDAGs for structured signature generation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pritchardn/BlockDAG
project_urls =
    Bug Tracker = https://github.com/pritchardn/BlockDAG/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    merklelib>=1.0

[options.packages.find]
where = src